--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -95,7 +95,7 @@
                         <compose view-model="./member-edit" model.bind="member"></compose>
                     </div>
                 </div>
-                <div class="col-md-6 fr-view" style="margin-bottom:16px;" if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing"
+                <div class="col-md-6 fr-view" style="margin-bottom:16px;padding-left:0px;" if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing"
                     )>
                     <h4 innherhtml.bind="story_0.topic" style="margin-top:16px;margin-bottom:0px;color:gray;">
                         ${'members.life-summary' | t} ${member.member_info.first_name}
@@ -116,7 +116,7 @@
                 <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, -1)"><i class="fa fa-chevron-right fa-3x"></i></div>
                 <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
-                <div class="col-md-3" show.bind="story_4.story_text != ''" style="float:right;padding-right:0px;border-left:solid 6px white;">
+                <div class="col-md-3 story-box last" show.bind="story_4.story_text != ''">
                     <h4 show.bind="story_4.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>
@@ -127,7 +127,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3" show.bind="story_3.story_text != ''" style="float:right;padding-right:0px;;border-left:solid 6px white;padding-right:12px;">
+                <div class="col-md-3 story-box" show.bind="story_3.story_text != ''">
                     <h4 show.bind="story_3.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>
@@ -138,7 +138,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3" show.bind="story_2.story_text != ''" style="float:right;padding-right:0px;;border-left:solid 6px white;;padding-right:12px;">
+                <div class="col-md-3 story-box" show.bind="story_2.story_text != ''" >
                     <h4 show.bind="story_2.name" dir="rtl" >
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>
@@ -149,7 +149,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3" show.bind="story_1.story_text != '' || user.privileges.EDITOR" style="float:right;padding-right:0px;padding-right:12px;">
+                <div class="col-md-3 story-box" show.bind="story_1.story_text != '' || user.privileges.EDITOR">
                     <h4 show.bind="story_1.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>
