--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -37,7 +37,7 @@
                         <div class="big-story-panel">
                             <p dir="rtl" if.bind="! user.editing" innerhtml.bind="story.story_text">
                             </p>
-                            <editable if.bind="user.editing" settings.bind="{show_date:false, class:'story-box', checkable: false}" story.bind="story"></editable>
+                            <editable if.bind="user.editing" settings.bind="{show_date:false, class:'story-section', checkable: false}" story.bind="story"></editable>
                         </div>
                     </div>
                 </div>
