--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -32,7 +32,7 @@
                             dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;">
                             <div style="height:130px;overflow:hidden;padding:20px;">
                                 <div style="margin-bottom: 10px;">
-                                    <editable settings.bind="{show_date:false, class:'story-box'}" story.bind="term"></editable>
+                                    <editable settings.bind="{show_date:false, class:'story-section'}" story.bind="term"></editable>
                                 </div>
                             </div>
                         </li>
