--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -89,6 +89,7 @@
                         <help topic="tags" position="bottom" style="position:absolute;left:2px;top:2px;"></help>
                         <multi-select-new options.bind="topic_list"
                             selected_options.bind="params.selected_topics"
+                            settings.bind="options_settings_new"
                             name="topics"
                             place_holder_text="photos.click-topic"
                             change.delegate="handle_topic_change($event) ">
@@ -106,7 +107,13 @@
                         </multi-select>
                     </div>
                     <div class="row">
-                        <multi-select options.bind="photographer_list"
+                        <multi-select-new options.bind="photographer_list" if.bind="user.debugging"
+                            place_holder_text="photos.click-photographer"
+                            ungrouped_selected_options.bind="params.selected_photographers"
+                            settings.bind="photographers_settings_new"
+                            change.delegate="handle_photographer_change($event)">
+                        </multi-select-new>
+                        <multi-select options.bind="photographer_list"  if.bind="!user.debugging"
                             place_holder_text="photos.click-photographer"
                             ungrouped_selected_options.bind="params.selected_photographers"
                             settings.bind="photographers_settings"
