--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="expires" content="0">
+    <meta name="google-site-verification" content="JnVD2e5l285fDPinK4jNDMeZ19eZs1Rx5WRLajzCxs8" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <title>סִפּוּרֵי גִּבְעַת בְּרֶנֶר</title>
