--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -45,6 +45,9 @@
                             <div class="form-group" if.bind="phase=='photos-not-editing'">
                                 <help topic="photos-not-editing" position="bottom"></help>
                             </div>
+                            <div class="form-group" if.bind="can_pair_photos">
+                                <button t="[title]photos.pair" class="btn btn-basic btn-md" click.delegate="pair_selected_photos()"><i class="far fa-yin-yang"></i></i></button>
+                            </div>
                             <div class="form-group" if.bind="phase=='photos-ready-to-edit'">
                                 <help topic="photos-ready-to-edit" position="bottom"></help>
                             </div>
@@ -84,9 +87,11 @@
                     <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;margin:0;padding:0;margin-bottom:16px;">
                         <span css="padding:0;margin:0;position:relative;width:${photo_size}px;height:${photo_size}px;"
                             repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' : name | take : 9999">
-                            <a click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" class.bind="photo.selected" >
-                                <img src="${photo.square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" 
-                                    height="${photo_size}" style="margin:0;cursor:pointer;" />
+                            <a click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
+                                class.bind="photo.selected" >
+                                <img src="${photo.photo_square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" 
+                                    height="${photo_size}" style="margin:0;cursor:pointer;" class.bind="photo.flipable" 
+                                    draggable="false" />
                             </a>
                         </span>
                     </div>
