--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -82,21 +82,21 @@
                                     ${'photos.upload' & t}
                                 </a>
                             </div>
-                        </form>
+                        </form>;
                     </div>
-                    <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;margin:0;padding:0;margin-bottom:16px;">
-                        <span css="padding:0;margin:0;positionxx:relative;width:${photo_size}px;height:${photo_size}px;"
+                    <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;margin:0;padding:0;margin-bottom:16px;display:flex;flex-wrap:wrap">
+                        <div css="padding:0;margin:0;positionxx:relative;width:${photo_size}px;height:${photo_size}px;"
                             repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' : name | take : 9999">
-                            <a style="position:relative;" click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
+                            <a style="position:relative;width:100%" click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
                                 class.bind="photo.selected" >
-                                <button class="btn btn-xs" css="position:absolute;top:${photo_size / 2};left:10px;background-color:rgba(0,0,0,0">
+                                <button class="btn btn-xs" css="position:absolute;top:${7 - photo_size / 2}px;left:${photo_size-19}px;background-color:rgba(0,0,0,0">
                                     <i class="far fa-info-circle" style="color: blue;" aubs-tooltip="text.bind:photo.title"></i>
                                 </button>
                                 <img src="${photo[photo.side].square_src}"  width="${photo_size}" 
                                     height="${photo_size}" style="margin:0;cursor:pointer;" class.bind="photo.flipable" 
                                     draggable="false" />
                             </a>
-                        </span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3" style="padding-right:6px;">
