--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -1,5 +1,5 @@
 <template>
-    <section class="container content-area photos" css="height: ${win_height-310}px;">
+    <section class="container content-area photos" css="height: ${win_height-323}px;">
         <div class="row content-area" style="height:380px;width:100%;margin-bottom:24px;margin-top:20px;padding-right:24px;" dir="rtl">
             <div class="row" style="margin-right:0;margin-left:0;">
                 <div class="col-md-1 hide-if-small" css="padding-top: 40px;position:relative">
@@ -82,9 +82,9 @@
                                     ${'photos.upload' & t}
                                 </a>
                             </div>
-                        </form>;
+                        </form>
                     </div>
-                    <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;margin:0;padding:0;margin-bottom:16px;display:flex;flex-wrap:wrap">
+                    <div class="row" id="photos-container" style="height:579px;overflow:auto;direction:rtl;margin:0;padding:0;margin-bottom:16px;display:flex;flex-wrap:wrap">
                         <div css="padding:0;margin:0;positionxx:relative;width:${photo_size}px;height:${photo_size}px;"
                             repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' : name | take : 9999">
                             <a style="position:relative;width:100%" click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
