--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -89,9 +89,8 @@
                             repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' : name | take : 9999">
                             <a style="position:relative;width:100%" click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
                                 class.bind="photo.selected" >
-                                <button class="btn btn-xs" css="position:absolute;top:${7 - photo_size / 2}px;left:${photo_size-19}px;background-color:rgba(0,0,0,0">
-                                    <i class="far fa-info-circle" style="color: blue;" aubs-tooltip="text.bind:photo.title"></i>
-                                </button>
+                                <info css="position:absolute;top:${7 - photo_size / 2}px;left:${photo_size-20}px;"
+                                    title.bind="photo_info_title(photo)" content.bind="photo_info_content(photo)"></info>
                                 <img src="${photo[photo.side].square_src}"  width="${photo_size}" 
                                     height="${photo_size}" style="margin:0;cursor:pointer;" class.bind="photo.flipable" 
                                     draggable="false" />
