--- a/src/admin/access-manager.html
+++ b/src/admin/access-manager.html
@@ -1,31 +1,59 @@
 <import from="./admin.scss"></import>
-<div style="height:95%;margin-top:0px;direction:ltr" dir="ltr">
-    <div style="width:400px;margin-left:auto;margin-right:auto">
+<div style="height: 95%; margin-top: 0px; direction: ltr" dir="ltr">
+    <div style="width: 400px; margin-left: auto; margin-right: auto">
         <h3 class="center">${'admin.access-manager' & t}</h3>
     </div>
-    <div style="height:730px;width:1200px;margin-left:auto;margin-right:auto;overflow:auto;">
+    <div
+        style="
+            height: 730px;
+            width: 1200px;
+            margin-left: auto;
+            margin-right: auto;
+            overflow: auto;
+        "
+    >
         <div class="form-inline">
             <div class="form-group">
-                <a href class="btn btn-primary" click.delegate="add_or_update()"style="margin-bottom:1em;">
+                <a
+                    href
+                    class="btn btn-primary"
+                    click.delegate="add_or_update()"
+                    style="margin-bottom: 1em"
+                >
                     ${'admin.add-user' & t}
                 </a>
             </div>
-            <div class="form-group" style="margin-bottom:14px;">
-                <input type="text" value.bind="filters[0].value" placeholder="${'admin.enter-filter-text' & t}" class="form-control"/>
+            <div class="form-group" style="margin-bottom: 14px">
+                <input
+                    type="text"
+                    value.bind="filters[0].value"
+                    placeholder="${'admin.enter-filter-text' & t}"
+                    class="form-control"
+                />
             </div>
-            <select class="form-control" value.bind="filters[1].value" style="margin-bottom:14px;">
-                <option repeat.for="status of statuses" value.bind="status">${'admin.' + status & t}</option>
-            </select> 
+            <select
+                class="form-control"
+                value.bind="filters[1].value"
+                style="margin-bottom: 14px"
+            >
+                <option repeat.for="status of statuses" value.bind="status">
+                    ${'admin.' + status & t}
+                </option>
+            </select>
         </div>
-        <table class="table table-striped" 
+        <table
+            class="table table-striped"
             aurelia-table="data.bind: authorized_users; display-data.bind: $displayData; 
             current-page.bind: currentPage; page-size.bind: pageSize; total-items.bind: totalItems;
-            filters.bind:filters;">
+            filters.bind:filters;"
+        >
             <thead>
                 <tr>
                     <th aut-sort="key: id">ID</th>
                     <th aut-sort="key: email">${'admin.email' & t}</th>
-                    <th aut-sort="key: first_name">${'admin.first-name' & t}</th>
+                    <th aut-sort="key: first_name">
+                        ${'admin.first-name' & t}
+                    </th>
                     <th aut-sort="key: last_name">${'admin.last-name' & t}</th>
                     <!--<th>Created></th>-->
                     <th>${'admin.privileges' & t}</th>
@@ -41,25 +69,46 @@
                     <td>${item.last_name}</td>
                     <td class="center">
                         <span repeat.for="r of item.roles">
-                            <a href title="${role_title(r)}" click.delegate="toggle_membership(r, item.id)">
-                                <i class="far ${role_class(r)} ${r.active ? 'is_active' : ''}"></i>
+                            <a
+                                href
+                                title="${role_title(r)}"
+                                click.delegate="toggle_membership(r, item.id)"
+                            >
+                                <i
+                                    class="far ${role_class(r)} ${r.active ? 'is_active' : ''}"
+                                ></i>
                             </a>
                         </span>
                     </td>
                     <!--<td>${item.created}</td>-->
                     <td class="center">
                         <a href click.delegate="add_or_update(item)">
-                            <i class="fas fa-pencil" title="Edit User Data" ></i>
+                            <i class="fas fa-pencil" title="Edit User Data"></i>
                         </a>
-                        <a href click.delegate="unlock_user(item.id)" show.bind="item.status=='Unconfirmed'">
-                            <i class="far fa-unlock" title="Unlock User" ></i>
+                        <a
+                            href
+                            click.delegate="unlock_user(item.id)"
+                            show.bind="item.status=='Unconfirmed'"
+                        >
+                            <i class="far fa-unlock" title="Unlock User"></i>
                         </a>
                     </td>
                     <td class="center">
-                        <a href click.delegate="resend_verification_email(item.id)" show.bind="item.status=='Unconfirmed'">
-                            <i class="far fa-envelope" title="Resend Verification Email"></i>
+                        <a
+                            href
+                            click.delegate="resend_verification_email(item.id)"
+                            show.bind="item.status=='Unconfirmed'"
+                        >
+                            <i
+                                class="far fa-envelope"
+                                title="Resend Verification Email"
+                            ></i>
                         </a>
-                        <a href title="Delete" click.delegate="delete_user(item)">
+                        <a
+                            href
+                            title="Delete"
+                            click.delegate="delete_user(item)"
+                        >
                             <i class="far fa-trash"></i>
                         </a>
                     </td>
@@ -67,10 +116,15 @@
             </tbody>
         </table>
 
-        <div class="row" style="margin-right:0;">
+        <div class="row" style="margin-right: 0">
             <div class="col-md-9">
-                <aut-pagination current-page.bind="currentPage" page-size.bind="pageSize" total-items.bind="totalItems"
-                    pagination-size.bind="15" boundary-links.bind="true"> 
+                <aut-pagination
+                    current-page.bind="currentPage"
+                    page-size.bind="pageSize"
+                    total-items.bind="totalItems"
+                    pagination-size.bind="15"
+                    boundary-links.bind="true"
+                >
                 </aut-pagination>
             </div>
 
@@ -78,7 +132,11 @@
                 <div class="form-inline">
                     <div class="form-group pull-right">
                         <label for="pageSize">Page Size: </label>
-                        <select value.bind="pageSize" id="pageSize" class="form-control">
+                        <select
+                            value.bind="pageSize"
+                            id="pageSize"
+                            class="form-control"
+                        >
                             <option model.bind="5">5</option>
                             <option model.bind="10">10</option>
                             <option model.bind="15">15</option>
@@ -87,17 +145,15 @@
                     </div>
                 </div>
             </div>
-        </div>        
+        </div>
     </div>
 </div>
 <style>
-    i.is_active
-    {
+    i.is_active {
         font-weight: bold;
         color: orange;
     }
-    h3.center
-    {
+    h3.center {
         text-align: center;
     }
 </style>
